--- a/Index.html
+++ b/Index.html
@@ -192,11 +192,11 @@
 
             <!-- Add your profile picture here -->
 
-            <img src="passport photo.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="" alt="Your Profile Picture" class="profile-picture">
 
-            <h1>Pranesh S</h1>
+            <h1>Mathiksha.J</h1>
 
-            <p>Am Mechanical Engineer</p>
+            <p>I'm data analist </p>
 
         </div>
 
@@ -258,7 +258,7 @@
 
             <h2>Education</h2>
 
-            <p>Deemed University  - Mech</p>
+            <p>Shri shankarlal sundarbai shasun jain for women(BCA)</p>
 
             
 
@@ -278,17 +278,17 @@
 
             <ul>
 
-                <li>React</li>
+                <li>data science</li>
 
-                <li>Mern</li>
+                <li>excel</li>
 
-                <li>Cloud Computing</li>
+                <li>CSS</li>
 
                 <li>Python</li>
 
-                <li>Spring</li>
+                <li>HTML5</li>
 
-                <li>ML & AI</li>
+                <li>Word</li>
 
                 <li>java</li>
 
@@ -354,7 +354,7 @@
 
     <footer>
 
-        <p>&copy; 2025 Pranesh S</p>
+        <p>&copy; 2025 Mathiksha.J</p>
 
     </footer>
 
