--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         nav {
 
-            background-color: #333;
+            background-color:#eOf7fa ;
 
             color: #fff;
 
@@ -194,9 +194,9 @@
 
             <img src="passport photo.jpg" alt="Your Profile Picture" class="profile-picture">
 
-            <h1>Pranesh S</h1>
+            <h1>Mathiksha J</h1></h1>
 
-            <p>Am Mechanical Engineer</p>
+            <p>I'm Web Developer</p>
 
         </div>
 
@@ -232,17 +232,8 @@
 
             <h2>About Me</h2>
 
-            <p>I'm a <b>web development</b> expert who is passionate about creating dynamic and user-friendly websites. 
-
-                I'm driven by the desire to craft high-performance web applications that enhance user experience and provide
-
-                 seamless digital solutions. With over 7 years of experience in the field, I'm dedicated to staying up to date 
-
-                 with the latest trends and innovations in the 
-
-                 web development landscape. I'm also committed to helping others learn more about web technologies, 
-
-                 best practices, and how to build secure and scalable websites.</p>
+            <p>I'm a <b>web development</b>"I am a passionate web developer with expertise in building responsive and user-friendly websites. I specialize in HTML, CSS, JavaScript and have experience developing dynamic web applications. My goal is to create seamless digital experiences that enhance user engagement and functionality. Check out my projects below!"
+</p>
 
 
 
@@ -258,7 +249,7 @@
 
             <h2>Education</h2>
 
-            <p>Deemed University  - Mech</p>
+            <p>Shri Shankarlal Sundarbai Shasun Jain College For Women</p>
 
             
 
@@ -278,23 +269,19 @@
 
             <ul>
 
-                <li>React</li>
-
-                <li>Mern</li>
-
-                <li>Cloud Computing</li>
+                
 
                 <li>Python</li>
 
-                <li>Spring</li>
+                <li>C++</li>
 
-                <li>ML & AI</li>
+                <li>HTML</li>
 
                 <li>java</li>
 
-                <li>c++</li>
+                <li>Data Structure</li>
 
-                <li>Java script</li>
+                <li>CSS</li>
 
             </ul>
 
@@ -312,13 +299,13 @@
 
             <ul>
 
-                <li><a href="#">E Cart website</a></li>
+                <li><a href="#">Implement hyperlinks in html</a></li>
 
-                <li><a href="#">Cloud Security IBM</a></li>
+                <li><a href="#">Create Form</a></li>
 
-                <li><a href="#">IBM chatbot</a></li>
+                <li><a href="#">Feedback Form</a></li>
 
-                <li><a href="#">College Portal</a></li> 
+                <li><a href="#">Box Model</a></li> 
 
                 <!-- Add more project links here -->
 
@@ -340,7 +327,7 @@
 
             <h2>Resume</h2>
 
-            <a href="file.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="resume.pdf" target="_blank" class="download-button">Download CV</a>
 
         </center>
 
@@ -354,7 +341,7 @@
 
     <footer>
 
-        <p>&copy; 2025 Pranesh S</p>
+        <p>&copy; 2025 Mathiksha.J</p>
 
     </footer>
 
