--- a/index.html
+++ b/index.html
@@ -301,11 +301,15 @@
 
                 <li><a href="#">Implement hyperlinks in html</a></li>
 
-                <li><a href="#">Create Form</a></li>
+                <li><a href="#">Form</a></li>
 
                 <li><a href="#">Feedback Form</a></li>
 
                 <li><a href="#">Box Model</a></li> 
+                
+                <li><a href="#">Digital clock</a></li> 
+                
+                li><a href="#">Password strength checker</a></li> 
 
                 <!-- Add more project links here -->
 
