--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         header {
 
-            background-color: #941919;
+            background-color: #808080;
 
             color: #fff;
 
@@ -130,7 +130,7 @@
 
         .download-button {
 
-            background-color: #333;
+            background-color: #00FFFF;
 
             color: #fff;
 
@@ -152,7 +152,7 @@
 
         .download-button:hover {
 
-            background-color: #555;
+            background-color: #008080;
 
         }
 
