--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         .download-button {
 
-            background-color: #00FFFF;
+            background-color: #FF0000;
 
             color: #fff;
 
