--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
 
         <div class="section-content">
 
-            <h2>BCA</h2>
+            <h2>Education</h2>
 
-            <p>Shri Shankarlal Sundarbai Shasun Jain College For Women</p>
+            <p>University of Madras-BCA</p>
 
             
 
